Refactor repeat element retrieval method
Replace list index-based method 'get(0)' with 'getFirst()' for better clarity. This change improves readability and aligns with the intention of accessing the first element directly. No functional impact on the existing processing logic.